fix: project section: paddding on small breakpoints

--- a/src/app/shared/components/main-sections/projects/projects.scss
+++ b/src/app/shared/components/main-sections/projects/projects.scss
@@ -211,18 +211,12 @@
   }
 
   .projectsContent {
-    padding: 32px 32px 0 32px;
+    padding: 48px 32px;
     gap: 80px;
   }
 
   .projectShowcase {
     gap: 16px;
-  }
-
-  .mt-60,
-  .mb-60 {
-    margin-top: 32px !important;
-    margin-bottom: 32px !important;
   }
 
   .projectImgOverlay {
@@ -238,10 +232,6 @@
 
   .projectImgOverlay {
     padding: 20px;
-  }
-
-  .f-size-24 {
-    font-size: 20px;
   }
 
   .contentTop,
